--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,12 @@ a {
     background-position: center;
 }
 
+main{
+    display: inline-block;
+    width: 75%;
+    margin-left: 20px;
+}
+
 .float-left {
     float: left;
     margin-right: 25px;
@@ -75,7 +81,7 @@ a {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
-    width: 75%;
+    width: 75;
     display: inline-block;
     margin-left: 20px;
      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -151,13 +157,11 @@ a {
     max-width: 150px;
 }
 
-.footer {
-    padding: 30px;
-    clear: both;
+footer {
+    padding: 30px;sd
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
-}
-
-.footer h2 {
     font-size: 20px;
 }
+
+
