--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    
 }
 
 body {
@@ -45,7 +46,7 @@ header nav ul li{
     display: inline-block;
     margin-left: 25px;
 }
-a {
+header a {
     color: #ffffff;
     text-decoration: none;
 }
@@ -79,12 +80,12 @@ main{
 
 .services {
     margin-bottom: 20px;
+    margin-left: 20px;
     padding: 50px;
     height: 300px;
     width: 75;
     display: inline-block;
-    margin-left: 20px;
-     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
 }
@@ -100,65 +101,42 @@ main{
 
 .benefits {
     margin-right: 20px;
-    padding: 20px;
+    padding: 40px;
     clear: both;
     float: right;
     width: 20%;
     height: 100%;
+    color: #ffffff;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit-aside {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
+.benefit-aside p{
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.benefits img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
+    size: 50px;
+    padding-top: 10px;
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
+aside h3 {
+    margin-bottom: 10px;
+    padding-top: 15px;
+    text-align: center;
 }
 
 footer {
-    padding: 30px;sd
+    padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
     font-size: 20px;
