--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 body {
     background-color: #d9dcd6;
 }
-/* header */
+/* header and navigation */
 
 header {
     padding: 20px;
@@ -62,6 +62,9 @@ header a {
     background-position: center;
 }
 
+
+/* services */
+
 main{
     display: inline-block;
     width: 75%;
@@ -98,6 +101,8 @@ main{
     margin-bottom: 20px;
     font-size: 36px;
 }
+
+/* benefits */
 
 .benefits {
     margin-right: 20px;
